k8s/frontend/3-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: istio-rollout-canary
  namespace: demo
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: istio-rollout

---
apiVersion: v1
kind: Service
metadata:
  name: istio-rollout-stable
  namespace: demo

spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: istio-rollout
