k8s/frontend/2-vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-vsvc
  namespace: demo
spec:
  gateways:
    - frontend-gateway
  hosts:
    - "frontend.localdev.me"
    # - frontend.local
  http:
    # Canary header-based routing
    - name: canary-debug
      match:
        - headers:
            x-canary:
              exact: "true"
      route:
        - destination:
            host: frontend-canary
          weight: 100

    # Default routing (primary)
    - name: primary
      route:
        - destination:
            host: frontend-stable
          weight: 100
        - destination:
            host: frontend-canary
          weight: 0
