k8s/frontend/main-vs.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: api-vs
  namespace: mv100
spec:
  hosts:
    - "api.localdev.me"
  gateways:
    - api-gateway
  http:
    # ----------------------
    # Catalog service (canary ready)
    # ----------------------
    # Canary header-based routing
    - name: catalog-canary-debug
      match:
        - headers:
            x-canary:
              exact: "true"
      route:
        - destination:
            host: catalog-canary
          weight: 100

    - name: auth-route
      match:
        - uri:
            prefix: /catalog
      route:
        - destination:
            host: catalog-stable
            port:
              number: 3001
          weight: 100
        - destination:
            host: catalog-canary
            port:
              number: 3001
          weight: 0

    # ----------------------
    # Catalog service
    # ----------------------
    - name: catalog-route
      match:
        - uri:
            prefix: /catalog
      route:
        - destination:
            host: catalog.mv100.svc.cluster.local
            port:
              number: 3001
          weight: 100

    # ----------------------
    # Cart service
    # ----------------------
    - name: cart-route
      match:
        - uri:
            prefix: /cart
      route:
        - destination:
            host: cart.mv100.svc.cluster.local
            port:
              number: 3002
          weight: 100

    # ----------------------
    # Orders service
    # ----------------------
    - name: orders-route
      match:
        - uri:
            prefix: /orders
      route:
        - destination:
            host: orders.mv100.svc.cluster.local
            port:
              number: 3003
          weight: 100

    # ----------------------
    # Payments service
    # ----------------------
    - name: payments-route
      match:
        - uri:
            prefix: /payments
      route:
        - destination:
            host: payments.mv100.svc.cluster.local
            port:
              number: 3004
          weight: 100
